--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "check": "svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. .",
-    "format": "prettier --write --plugin-search-dir=. ."
+    "format": "prettier --write --plugin-search-dir=. .",
+    "git": "git pull && pnpm format && pnpm lint && pnpm build && git add . && git commit -m \"$MSG\" && git push"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
